deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
  namespace: blockchaintp-training
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ${IMAGE}
        ports:
        - containerPort: 80
