deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: blockchaintp-training
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: website
