deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: blockchaintp-training
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - resources.blockchaintp.com
    secretName: ingress-training-website
  rules:
  - host: resources.blockchaintp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
